tests/snapshots/snapshot_golden_master__gm_cross_format_work_order_toml.snap
---
source: tests/snapshot_golden_master.rs
expression: toml_str
---
id = "cccccccc-dddd-4eee-8fff-aaaaaaaaaaaa"
task = "cross-format test"
lane = "patch_first"

[workspace]
root = "."
mode = "staged"
include = ["src/**"]
exclude = ["target/**"]

[context]
files = []
snippets = []

[policy]
allowed_tools = []
disallowed_tools = []
deny_read = []
deny_write = []
allow_network = []
deny_network = []
require_approval_for = []

[requirements]
required = []

[config]
model = "gpt-4o"

[config.vendor]

[config.env]
