tests/snapshots/snapshot_golden_master__gm_envelope_event.snap
---
source: tests/snapshot_golden_master.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-gm-001",
  "event": {
    "ts": "2025-08-01T08:00:00Z",
    "type": "assistant_delta",
    "text": "streaming token"
  }
}
