tests/snapshots/snapshot_golden_master__gm_envelope_fatal_no_ref.snap
---
source: tests/snapshot_golden_master.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": null,
  "error": "handshake timeout",
  "error_code": "protocol_handshake_failed"
}
