tests/snapshots/snapshot_golden_master__gm_envelope_fatal_with_ref.snap
---
source: tests/snapshot_golden_master.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": "run-gm-001",
  "error": "sidecar exited unexpectedly"
}
