tests/snapshots/snapshot_golden_master__gm_envelope_hello_passthrough.snap
---
source: tests/snapshot_golden_master.rs
expression: snap_json(&env)
---
{
  "t": "hello",
  "contract_version": "abp/v0.1",
  "backend": {
    "id": "sidecar:claude",
    "backend_version": "4.0.0",
    "adapter_version": "1.0.0"
  },
  "capabilities": {
    "streaming": "native",
    "tool_read": "native",
    "tool_write": "native",
    "tool_edit": "emulated",
    "tool_bash": "emulated",
    "mcp_client": {
      "restricted": {
        "reason": "beta feature"
      }
    },
    "tool_use": "native",
    "extended_thinking": "unsupported"
  },
  "mode": "passthrough"
}
