tests/snapshots/snapshot_golden_master__gm_envelope_run.snap
---
source: tests/snapshot_golden_master.rs
expression: env
---
{
  "t": "run",
  "id": "run-gm-001",
  "work_order": {
    "id": "cccccccc-dddd-4eee-8fff-aaaaaaaaaaaa",
    "task": "envelope run test",
    "lane": "patch_first",
    "workspace": {
      "root": ".",
      "mode": "staged",
      "include": [],
      "exclude": []
    },
    "context": {
      "files": [],
      "snippets": []
    },
    "policy": {
      "allowed_tools": [],
      "disallowed_tools": [],
      "deny_read": [],
      "deny_write": [],
      "allow_network": [],
      "deny_network": [],
      "require_approval_for": []
    },
    "requirements": {
      "required": []
    },
    "config": {
      "model": null,
      "vendor": {},
      "env": {},
      "max_budget_usd": null,
      "max_turns": null
    }
  }
}
